--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      /*
+      @font-face {
+        font-family: FreePixel;
+        src: url('./fonts/FreePixel.ttf');
+      }
+
+      svg {
+        font-family: font, fallBackFonts, sans-serif;
+      }
+      */
+    </style>
+    
     <title>React App</title>
   </head>
   <body>
